[package]
name = "hd_vsa_mnist"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.8", features = ["small_rng"] }
csv = "1.2"
wide = "0.7"
rayon = "1.7"
array-init = "2.1"
clap = { version = "4.3", features = ["derive"] }

[profile.dev]
opt-level = 3
overflow-checks = true
